# dotfiles

./: .git_msg  .gitattributes  .gitignore  .gitmodules  README.md  TODO  TODO.md  install.ps1  install.sh  main.ps1  main.sh  package.json  reconstruct_history.py  remote-install.ps1  run-gui.sh  trash  tsconfig.base.json  turbo.json
.turbo/daemon/: a500e87c20784725-turbo.log.2026-04-02
apps/cli/: package.json
apps/gui/: components.json  index.html  package.json  tsconfig.json  (+1 more)
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/icons/: icon.icns
apps/gui/src-tauri/src/: main.rs
bootstrap/: main.sh  settings.json  unix-settings.json  version.json  version.sh  w10-settings.json
configurations/: alias-wsl.sh  alias.sh  bashrc.sh  generator.sh  personal-settings.ps1  personal.sh  settings.json  ssl.sh
docs/: architecture.md
framework/: ex new program.sh
legacy/: remote-install.ps1  remote-install.sh
lib/: utils.sh
programs/: anaconda.sh  apache-config.sh  apache.sh  azurecli.sh  bitwarden.ps1  ccleaner.ps1  discord.ps1  docker-compose.sh  docker-desktop.ps1  docker.sh  dotnet copy.sh  dotnet-mono.sh  dotnet-nuget.sh  dotnet.sh  dropbox.ps1  gcloudcli.sh  gcloudsdk.sh  geforce-experience.ps1  golang.sh  google-backup-and-sync.ps1  herokutoolbelt.sh  httrack.ps1  hyperv.ps1  insomnia.ps1  jdk.ps1  kubectl.sh  kubernetes-helm.sh  megasync.ps1  mongo.sh  mosh.sh  mysql-phpmyadmin.sh  mysql.sh  netkit.sh  nginx.sh  node-localtunnel.sh  node-strapi.sh  nvm-config.sh  nvm.sh  php-composer.sh  php-laravel.sh  (+37 more)
scaffolding/: ex new program
(+61 files in other folders)
