[package]
name = "dotfiles-gui"
version = "0.1.0"
description = "Universal Dotfiles GUI"
authors = ["matbrgz"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [ "api-all"] }

[features]
# by default Tauri runs in production mode
# this feature enables the devtools for development
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
